Stretch - added fixed nav with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,11 @@ p {
   margin: 0 auto;
 }
 .navigation {
-  background: #F6F6F6;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: ;
+  background-color: rgba(246, 246, 246, 0.7);
   border-bottom: 1px solid #dee2e6;
   display: flex;
   flex-direction: column;
@@ -195,6 +199,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 99px;
 }
 .home .intro .header-img {
   display: flex;
