--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,10 @@
 // Navigation code here
 .navigation {
-    background: @nav-bg;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: ;
+    background-color: rgba(@nav-bg, .7);
     border-bottom: 1px solid @main-border-color;
     .flex-column-center();
     h1 {
